--- a/frontend/src/styles/addcar.module.css
+++ b/frontend/src/styles/addcar.module.css
@@ -53,8 +53,11 @@
 .submit{
     margin-top: 30px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-
 .upload{
     width: 100%;
     display: flex;
