--- a/frontend/src/styles/nav-footer.css
+++ b/frontend/src/styles/nav-footer.css
@@ -79,10 +79,15 @@ nav > div{
 .profile img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
 }
+
 .profile{
     width: 45px;
     height: 45px;
+    border-radius: 50%;
+    border: none;
 }
 .profile:hover{
     cursor: pointer;
