--- a/frontend/src/styles/carModal.module.css
+++ b/frontend/src/styles/carModal.module.css
@@ -13,7 +13,7 @@
     background-image: url('../assets/background.png');
     background-size: 100% 100%;
     background-attachment: fixed;
-    width: 450px;
+    width: 100%;
     height: 330px;
     display: flex;
     align-items: center;
@@ -132,4 +132,24 @@
    .background{
         width: 100%;
    }
+}
+
+@media screen and (max-width:500px){
+    .container > div:nth-child(1){
+        width: 300px;
+        margin: 0;
+    }
+    .info{
+        width: 300px;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width:400px) {
+    .container > div:nth-child(1){
+        width: 250px;
+    }
+    .info{
+        width: 250px;
+    }
 }
