--- a/frontend/src/styles/card.module.css
+++ b/frontend/src/styles/card.module.css
@@ -35,8 +35,16 @@
     color: #90A3BF;
     margin-top: 5px;
 }
+.image img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .image{
     margin: 64px auto;
+    max-width: 100%;
+    max-height: 150px;
+    overflow: hidden;
 }
 
 .info{
@@ -78,7 +86,6 @@
     gap: 8px;
     width: fit-content;
     height: fit-content;
-    right: 24px;
     background-color: #3563E9;
     border-radius: 4px;
     color: #fff;
