--- a/frontend/src/styles/dashboard.module.css
+++ b/frontend/src/styles/dashboard.module.css
@@ -40,11 +40,14 @@
     border-radius: 8px;
 }
 
-.info img{
+.info img, .profile img{
     width: 100%;
     height: 100%;
 }
-
+.profile img{
+    object-fit: cover;
+    border-radius: 50%;
+}
 .profile{
     width: 80px;
     height: 80px;
@@ -57,6 +60,10 @@
     align-items: center;
     min-width: 250px;
     justify-content: space-between;
+}
+
+.info > div:nth-child(2){
+    display: flex;
 }
 
 .main{
@@ -73,14 +80,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    margin: auto;
     color: rgba(19, 19, 19, 0.6);
 }
 .loader > p{
     margin-top: 10px;
+    text-align: center;
 }
 
 .no{
     text-align: center;
+    margin: auto;
     color: #F44336;
     font-size: 20px;
 }
@@ -91,7 +102,25 @@
     flex-wrap: wrap;
     gap: 40px;
 }
+.del{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 30px;
+    gap: 8px;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #F44336;
+    margin-left: 20px;
+}
 
+.del:hover{
+    cursor: pointer;
+    background-color: #ee746b;
+    transition: background-color 0.4s ease;
+}
 .more{
     display: flex;
     justify-content: center;
@@ -121,5 +150,11 @@
     .info>div:nth-child(1){
         width: 100%;
         margin-bottom: 30px;
+    }
+    .info > div:nth-child(2){
+        flex-direction: column;
+    }
+    .del{
+        margin-top: 15px;
     }
 }
